# fun

./: .clang-format  CMakeLists.txt
data/: CMakeLists.txt  array.hpp  array_test.cpp  concepts.hpp  data.hpp  either.hpp  either_test.cpp  maybe.hpp  maybe_test.cpp
parse/: CMakeLists.txt  parse_test.cpp
